[workspace]
exclude = [
    "examples/*",
]
members = [
    "hetu",
    "crates/*",
]

[workspace.package]
authors = ["Hubert Shelley <hubertshelley@163.com>"]
categories = ["asynchronous", "network-programming", "web-programming::http-server"]
description = """
Hetu
"""
documentation = "https://docs.rs/"
edition = "2021"
homepage = ""
keywords = ["hetu", "http", "web", "framework"]
license = "Apache-2.0"
readme = "readme.md"
repository = "https://github.com/hubertshelley/hetu"
version = "0.1.0"

[workspace.dependencies]
anyhow = "1.0.66"
async-trait = "0.1.58"
bytes = "1.2.1"
chrono = "0.4.22"
clap = "4.0.18"
once_cell = "1.16.0"
serde = "1.0.147"
thiserror = "1.0.37"
tokio = "1.21.2"
tracing = "0.1.37"
tracing-subscriber = "0.3.16"
uuid = "1.2.1"
hyper = "1"
http-body-util = "0.1.0-rc.2"

hetu_core = { path = "./crates/hetu_core" }
